--- a/src/pages/orders/orders.html
+++ b/src/pages/orders/orders.html
@@ -47,8 +47,8 @@
         <ion-refresher-content>Collecting Estimated Orders...</ion-refresher-content>
       </ion-refresher>
       <button ion-item *ngFor="let item of estimatedOrders; let i = index" (click)="openNavDetailsPage(item,'estimate')" icon-start>
-        <h2>{{i+1}}  - {{ item.customer_NAME }}</h2>
-        <h3>{{ item.product_NAME }}</h3>
+        <h2>#{{i+1}} - {{ item.customer_NAME }}</h2>
+        <!-- <h3>{{ item.product_NAME }}</h3> -->
         <!-- <h3>Quantity : {{displayIndianNumber(item.total_ORDER_UNIT)}}</h3> -->
         <!-- <p>Total Cost     : {{ displayINR(item.total_COST) }}</p>
         <p>Order          : {{ item.order_GROUP_NO }} </p>
@@ -58,8 +58,14 @@
         <p>
           <ion-grid>
             <ion-row>
+              <ion-col col-5>Item</ion-col>
+              <ion-col col-7>
+                <h3>{{ item.product_NAME }}</h3>
+              </ion-col>
+            </ion-row>
+            <ion-row>
               <ion-col col-5>Quantity</ion-col>
-              <ion-col col-7> {{displayIndianNumber(item.total_ORDER_UNIT)}}</ion-col>
+              <ion-col col-7> {{displayIndianNumber(item.total_ORDER_UNIT)}} {{item.uom}}</ion-col>
             </ion-row>
             <ion-row>
               <ion-col col-5>Total Cost</ion-col>
@@ -74,13 +80,13 @@
               <ion-col col-7>{{item.order_DT | date: 'dd-MM-yyyy'}}</ion-col>
             </ion-row>
             <ion-row>
-              <ion-col col-5>Sales Rep ID</ion-col>
+              <ion-col col-5>Sales Rep </ion-col>
               <ion-col col-7>{{item.sales_REP_ID}} </ion-col>
             </ion-row>
-            <ion-row>
+            <!-- <ion-row>
               <ion-col col-5>Sales Rep Name</ion-col>
               <ion-col col-7>{{item.sales_REP_NAME}} </ion-col>
-            </ion-row>
+            </ion-row> -->
           </ion-grid>
         </p>
       </button>
@@ -90,7 +96,8 @@
       <ion-refresher (ionRefresh)="doRefreshApproved($event)">
         <ion-refresher-content>Collecting Approved Orders...</ion-refresher-content>
       </ion-refresher>
-      <button ion-item *ngFor="let approved_item of approvedOrders; let i = index" (click)="openNavDetailsPage(approved_item,'approve')" icon-start>
+      <button ion-item *ngFor="let approved_item of approvedOrders; let i = index" (click)="openNavDetailsPage(approved_item,'approve')"
+        icon-start>
         <!-- <h2>{{ approved_item.customer_NAME }}</h2>
         <h3>{{ approved_item.product_NAME }}</h3>
         <h3>Qty # {{displayIndianNumber(approved_item.total_ORDER_UNIT)}}</h3>
@@ -99,11 +106,19 @@
         <p>Date {{approved_item.order_DT}}</p>
         <p>Sales Rep Id: {{approved_item.sales_REP_ID}}</p>
         <p>Sales Rep : {{approved_item.sales_REP_NAME}}</p> -->
+        <h2>#{{i+1}} - {{ approved_item.customer_NAME }}</h2>
+        <!-- <h3>{{ approved_item.product_NAME }}</h3> -->
         <p>
           <ion-grid>
             <ion-row>
-              <ion-col col-5>{{i+1}} - Quantity</ion-col>
-              <ion-col col-7> {{displayIndianNumber(approved_item.total_ORDER_UNIT)}}</ion-col>
+              <ion-col col-5>Item</ion-col>
+              <ion-col col-7>
+                <h3>{{ approved_item.product_NAME }}</h3>
+              </ion-col>
+            </ion-row>
+            <ion-row>
+              <ion-col col-5>Quantity</ion-col>
+              <ion-col col-7> {{displayIndianNumber(approved_item.total_ORDER_UNIT)}} {{approved_item.uom}}</ion-col>
             </ion-row>
             <ion-row>
               <ion-col col-5>Total Cost</ion-col>
@@ -118,13 +133,13 @@
               <ion-col col-7>{{approved_item.order_DT | date: 'dd-MM-yyyy'}}</ion-col>
             </ion-row>
             <ion-row>
-              <ion-col col-5>Sales Rep ID</ion-col>
+              <ion-col col-5>Sales Rep</ion-col>
               <ion-col col-7>{{approved_item.sales_REP_ID}} </ion-col>
             </ion-row>
-            <ion-row>
+            <!-- <ion-row>
               <ion-col col-5>Sales Rep Name</ion-col>
               <ion-col col-7>{{approved_item.sales_REP_NAME}} </ion-col>
-            </ion-row>
+            </ion-row> -->
           </ion-grid>
         </p>
       </button>
@@ -134,7 +149,8 @@
       <ion-refresher (ionRefresh)="doRefreshRejected($event)">
         <ion-refresher-content>Collecting Rejected Orders...</ion-refresher-content>
       </ion-refresher>
-      <button ion-item *ngFor="let rejected_item of rejectedOrders; let i = index" (click)="openNavDetailsPage(rejected_item,'reject')" icon-start>
+      <button ion-item *ngFor="let rejected_item of rejectedOrders; let i = index" (click)="openNavDetailsPage(rejected_item,'reject')"
+        icon-start>
         <!-- <h2>{{ rejected_item.customer_NAME }}</h2>
         <h3>{{ rejected_item.product_NAME }}</h3>
         <h3>Qty # {{displayIndianNumber(rejected_item.total_ORDER_UNIT)}}</h3>
@@ -143,11 +159,19 @@
         <p>Date {{rejected_item.order_DT}}</p>
         <p>Sales Rep ID : {{rejected_item.sales_REP_ID}}</p>
         <p>Sales Rep : {{rejected_item.sales_REP_NAME}}</p> -->
+        <h2>#{{i+1}} - {{ rejected_item.customer_NAME }}</h2>
+        <!-- <h3>{{ rejected_item.product_NAME }}</h3> -->
         <p>
           <ion-grid>
             <ion-row>
-              <ion-col col-5>{{i+1}} - Quantity</ion-col>
-              <ion-col col-7> {{displayIndianNumber(rejected_item.total_ORDER_UNIT)}}</ion-col>
+              <ion-col col-5>Item</ion-col>
+              <ion-col col-7>
+                <h3>{{ rejected_item.product_NAME }}</h3>
+              </ion-col>
+            </ion-row>
+            <ion-row>
+              <ion-col col-5>Quantity</ion-col>
+              <ion-col col-7> {{displayIndianNumber(rejected_item.total_ORDER_UNIT)}} {{rejected_item.uom}}</ion-col>
             </ion-row>
             <ion-row>
               <ion-col col-5>Total Cost</ion-col>
@@ -162,7 +186,7 @@
               <ion-col col-7>{{rejected_item.order_DT | date: 'dd-MM-yyyy'}}</ion-col>
             </ion-row>
             <ion-row>
-              <ion-col col-5>Sales Rep ID</ion-col>
+              <ion-col col-5>Sales Rep</ion-col>
               <ion-col col-7>{{rejected_item.sales_REP_ID}} </ion-col>
             </ion-row>
             <!-- <ion-row>
