--- a/src/pages/front-office/front-office.html
+++ b/src/pages/front-office/front-office.html
@@ -25,48 +25,92 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content >
   <!-- <ion-refresher (ionRefresh)="doRefresh($event)">
     <ion-refresher-content>Collecting Latest Data...</ion-refresher-content>
   </ion-refresher> -->
   <div [ngSwitch]="category">
-    <ion-list padding *ngSwitchCase="'approved-orders'">
+    <ion-list *ngSwitchCase="'approved-orders'">
       <div *ngFor="let item of approvedOrders; let i = index">
-        <ion-item>
-          <h2>{{i+1}} - {{ item.order_NO }}</h2>
-          <h2>{{ item.product_NAME }}</h2>
-          <h2>{{ item.unit_TYPE }} Qty # {{displayIndianNumber(item.unit_TYPE)}}</h2>
-          <h3>{{ item.customer_NAME }}</h3>
-          <h3>{{ item.site_NAME }}</h3>
-          <h3>{{ item.ordered_CREATED_BY }}</h3>
-          <button ion-button block color="secondary" (click)="doRadio(item.order_NO,'ALLOCATED','APPROVED')">Allocate Vehicle</button>
-        </ion-item>
+        <ion-item-divider color="light">
+          #{{i+1}} - {{ item.order_NO }}
+          <p>
+            <ion-item>
+              <h2>{{ item.product_NAME }}</h2>
+              <div *ngIf="item.product_GROUP == 'PAVER' || item.product_GROUP == 'DESIGNER_TILES'">
+                <h2>Qty # {{displayIndianNumber(item.total_ORDER_UNIT)}} SqFt</h2>
+              </div>
+              <div *ngIf="item.product_GROUP == 'HOLLOW_BLOCK'">
+                <h2>Qty # {{displayIndianNumber(item.unit)}} Pieces</h2>
+              </div>
+              <div *ngIf="item.product_GROUP =='QUARRY'">
+                <h2>Qty # {{displayIndianNumber(item.unit_TYPE)}} Units</h2>
+              </div>
+              <h3>{{ item.customer_NAME }}</h3>
+              <h3>{{ item.site_NAME }}</h3>
+              <h3>{{ item.ordered_CREATED_BY }}</h3>
+              <button ion-button block color="secondary" (click)="doRadio(item.order_NO,'ALLOCATED','APPROVED')">Allocate Vehicle</button>
+            </ion-item>
+          </p>
+        </ion-item-divider>
       </div>
     </ion-list>
 
     <ion-list *ngSwitchCase="'in-loading'">
       <div ion-item *ngFor="let allocated_item of allocatedOrders; let i = index" icon-start>
-        <h2>{{i+1}} - {{ allocated_item.order_NO }}</h2>
-        <h2>{{ allocated_item.product_NAME }}</h2>
-        <h2>{{ allocated_item.unit_TYPE }} Qty # {{displayIndianNumber(allocated_item.unit_TYPE)}}</h2>
-        <h3>{{ allocated_item.customer_NAME }}</h3>
-        <h3>{{ allocated_item.site_NAME }}</h3>
-        <h3>{{ allocated_item.ordered_CREATED_BY }}</h3>
-        <!-- <button ion-button block color="secondary" (click)="doRadio(allocated_item.order_NO,'LOADED')">Loading Complete</button> -->
-        <button ion-button block color="danger" (click)="updateSubOrder(allocated_item.order_NO,'APPROVED','ALLOCATED')">Cancel Vehicle</button>
+        <ion-item-divider color="light">
+            <!-- #{{i+1}} - {{ allocated_item.order_NO }} -->
+          <p>
+            <ion-item>
+              <h2>#{{i+1}} - {{ allocated_item.order_NO }}</h2>
+              <h2>{{ allocated_item.product_NAME }}</h2>
+              <div *ngIf="allocated_item.product_GROUP == 'PAVER' || allocated_item.product_GROUP == 'DESIGNER_TILES'">
+                <h2>Qty # {{displayIndianNumber(allocated_item.total_ORDER_UNIT)}} SqFt</h2>
+              </div>
+              <div *ngIf="allocated_item.product_GROUP == 'HOLLOW_BLOCK'">
+                <h2>Qty # {{displayIndianNumber(allocated_item.unit)}} Pieces</h2>
+              </div>
+              <div *ngIf="allocated_item.product_GROUP =='QUARRY'">
+                <h2>Qty # {{displayIndianNumber(allocated_item.unit_TYPE)}} Units</h2>
+              </div>
+              <h3>{{ allocated_item.customer_NAME }}</h3>
+              <h3>{{ allocated_item.site_NAME }}</h3>
+              <h3>{{ allocated_item.ordered_CREATED_BY }}</h3>
+              <!-- <button ion-button block color="secondary" (click)="doRadio(allocated_item.order_NO,'LOADED')">Loading Complete</button> -->
+              <button ion-button block color="danger" (click)="updateSubOrder(allocated_item.order_NO,'APPROVED','ALLOCATED')">Cancel Allocation</button>
+            </ion-item>
+          </p>
+        </ion-item-divider>
       </div>
     </ion-list>
 
     <ion-list *ngSwitchCase="'loaded'">
       <div ion-item *ngFor="let loaded_item of loadedOrders; let i = index" icon-start>
-        <h2>{{i+1}} - {{ loaded_item.order_NO }}</h2>
-        <h3>{{ loaded_item.product_NAME }}</h3>
-        <h2>{{ loaded_item.unit_TYPE }} Qty # {{displayIndianNumber(loaded_item.unit_TYPE)}}</h2>
-        <h3>{{ loaded_item.customer_NAME }}</h3>
-        <h3>{{ loaded_item.site_NAME }}</h3>
-        <h3>{{ loaded_item.ordered_CREATED_BY }}</h3>
-        <button ion-button block color="secondary" (click)="updateSubOrder(loaded_item.order_NO,'WEIGHED','LOADED')">Weighment Complete</button>
-        <button ion-button block color="danger" (click)="updateSubOrder(loaded_item.order_NO,'ALLOCATED','LOADED')">Cancel Loading</button>
+        <ion-item-divider color="light">
+            #{{i+1}} - {{ loaded_item.order_NO }}
+          <p>
+            <ion-item>
+              <!-- <h2>#{{i+1}} - {{ loaded_item.order_NO }}</h2> -->
+              <h3>{{ loaded_item.product_NAME }}</h3>
+              <div *ngIf="loaded_item.product_GROUP == 'PAVER' || loaded_item.product_GROUP == 'DESIGNER_TILES'">
+                <h2>Qty # {{displayIndianNumber(loaded_item.total_ORDER_UNIT)}} SqFt</h2>
+              </div>
+              <div *ngIf="loaded_item.product_GROUP == 'HOLLOW_BLOCK'">
+                <h2>Qty # {{displayIndianNumber(loaded_item.unit)}} Pieces</h2>
+              </div>
+              <div *ngIf="loaded_item.product_GROUP =='QUARRY'">
+                <h2>Qty # {{displayIndianNumber(loaded_item.unit_TYPE)}} Units</h2>
+              </div>
+              <h3>{{ loaded_item.customer_NAME }}</h3>
+              <h3>{{ loaded_item.site_NAME }}</h3>
+              <h3>{{ loaded_item.ordered_CREATED_BY }}</h3>
+
+              <button ion-button block color="one" (click)="showPrompt()">Capture Weight</button>
+              <button ion-button block color="secondary" (click)="updateSubOrder(loaded_item.order_NO,'WEIGHED','LOADED')">Weighment Complete</button>
+              <!-- <button ion-button block color="danger" (click)="updateSubOrder(loaded_item.order_NO,'ALLOCATED','LOADED')">Cancel Loading</button> -->
+            </ion-item>
+          </p>
+        </ion-item-divider>
       </div>
     </ion-list>
   </div>
