--- a/src/pages/print/print.html
+++ b/src/pages/print/print.html
@@ -1,18 +1,27 @@
-<!--
-  Generated template for the PrintPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
-  <ion-navbar>
-    <ion-title>print</ion-title>
+  <ion-navbar [color]="'head'">
+    <ion-buttons left>
+      <button ion-button icon-only menuToggle>
+        <ion-icon name="menu"></ion-icon>
+      </button>
+    </ion-buttons>
+    <ion-title center>Util</ion-title>
+    <ion-buttons right>
+      <img alt="logo" height="40" src="assets/imgs/srk-0.png">
+    </ion-buttons>
   </ion-navbar>
-
 </ion-header>
 
-
 <ion-content padding>
-  <button class="button" (click)="print()">Print</button>
+  <ion-card>
+    <button ion-button (click)="watch()">Get Position</button>
+    <p>Position : {{coords}}</p>
+    <p>Accuracy : {{accuracy}}</p>
+    <p *ngIf="error">{{error}}</p>
+  </ion-card>
+  <ion-card>
+    <button ion-button (click)="print()">Print</button>
+    <p>Content : {{content}}</p>
+    <p *ngIf="error">{{print_error}}</p>
+  </ion-card>
 </ion-content>
