--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -15,6 +15,7 @@
   <ion-tab [root]="frontOfficePage" tabIcon="clipboard" tabTitle="Front Office" [ngStyle]="{'color':'blue'}"></ion-tab>
   <ion-tab [root]="loadingPage" tabIcon="cube" tabTitle="Loading" [ngStyle]="{'color':'blue'}"></ion-tab>
   <ion-tab [root]="gatePage" tabIcon="person" tabTitle="Gate" [ngStyle]="{'color':'blue'}"></ion-tab>
+  <ion-tab [root]="printPage" tabIcon="person" tabTitle="Util" [ngStyle]="{'color':'blue'}"></ion-tab>
 </ion-tabs>
 <ion-tabs *ngIf="role == '2'" [color]="'tail'">
   <ion-tab [root]="homePage" tabTitle="Home" tabIcon="home"></ion-tab>
